make several changes

--- a/contactus.html
+++ b/contactus.html
@@ -23,39 +23,33 @@
     </head>
     
     <body>  
-            <!-- NAVBAR STARTS -->
+        <!-- NAVBAR STARTS -->
         <div class="container">
-            <div class="cus-top">
-                <nav class="cus-nav">
-                    <a href="index.html" class="align-left">
-                        <img src="imgs/logobox.png" alt="">
-                        <span class="navbar-text">bluebox</span>
-                    </a>
-                    <ul class="navbar-links align-right" >
-                        <li>
-                            <a href="#" class="after">about</a>
+            <nav class="navbar navbar-expand-lg">
+                <a class="navbar-brand" href="#">
+                    <img src="imgs/logobox.png" alt="" class="d-inline-block align-top">
+                    <span>Bluebox</span>
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
+                </button>
+                <div class="collapse navbar-collapse cus-nav" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item after">
+                            <a class="nav-link" href="#">Home</a>
                         </li>
-                        <li>
-                            <a href="portfolio1.html" class="after">works</a>
+                        <li class="nav-item after">
+                            <a class="nav-link" href="#">service</a>
                         </li>
-                        <li>
-                            <a href="index.html#service" class="after">services</a>
+                        <li class="nav-item after">
+                            <a class="nav-link" href="#">works</a>
                         </li>
-                        <li>
-                            <a href="#" class="after">blog</a>
-                        </li>
-                        <li>
-                            <a href="#">contactus</a>
-                        </li>
-                        <li>
-                            <form action="" class="cus-search align-right">
-                                <input type="text" name="" id="" class="cus-input" placeholder="search">
-                            </form>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">contact us</a>
                         </li>
                     </ul>
-                    
-                </nav>
-            </div>
+                </div>
+            </nav>
         </div>
         <!-- NAVBAR ENDS -->
         <!-- CONTACT US FORM -->
@@ -75,11 +69,11 @@
                     <form action="#" method="post" >
                         <div class="form-inner">
                             <p>Name</p>
-                            <input type="text" placeholder="Your Name" id="txtName" name="txtName" required>
+                            <input type="text" placeholder="Your Name" id="txtName" name="txtName" required width="100%">
                             <p>Email address</p>
-                            <input type="email" placeholder="Your Email" >
+                            <input type="email" placeholder="Your Email"width="100%" >
                             <p>Subject</p>
-                            <input type="email" placeholder="Subject" required>
+                            <input type="email" placeholder="Subject" required width="100%">
                             <p>Description</p>
                             <div class="row">
                             <textarea  name="txtMessage" class="col-lg-12" cols="47" rows="10"></textarea>
@@ -88,7 +82,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="cus-map col-lg-6">
+                <div class="cus-map col-lg-6 col-sm-12 col-md-12">
                     <h4>We are here</h4>
                         <iframe class="wow zoomIn" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69319292053!2d-0.3817765050863085!3d51.528307984912544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C%20UK!5e0!3m2!1sen!2s!4v1573498080116!5m2!1sen!2s" width="350" height="280" frameborder="0" style="border:20px solid #e2e7ed;" allowfullscreen=""></iframe>
                     <div class="map-detail">
