--- a/index.html
+++ b/index.html
@@ -26,45 +26,44 @@
     <body>
             <!-- NAVBAR STARTS -->
         <div class="container">
-            <div class="cus-top">
-                <nav class="cus-nav">
-                    <a href="index.html" class="align-left">
-                        <img src="imgs/logobox.png" alt="">
-                        <span class="navbar-text">bluebox</span>
-                    </a>
-                    <ul class="navbar-links align-right" >
-                        <li>
-                            <a href="#" class="after">about</a>
+            <nav class="navbar navbar-expand-lg">
+                <a class="navbar-brand" href="#">
+                    <img src="imgs/logobox.png" alt="" class="d-inline-block align-top">
+                    <span>Bluebox</span>
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
+                </button>
+                <div class="collapse navbar-collapse cus-nav" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item after">
+                            <a class="nav-link" href="#">Home</a>
                         </li>
-                        <li>
-                            <a href="portfolio1.html" class="after"  target="_blank">works</a>
+                        <li class="nav-item after">
+                            <a class="nav-link" href="#">service</a>
                         </li>
-                        <li>
-                            <a href="#service" class="after">services</a>
+                        <li class="nav-item after">
+                            <a class="nav-link" href="#">works</a>
                         </li>
-                        <li>
-                            <a href="#" class="after">blog</a>
-                        </li>
-                        <li>
-                            <a href="contactus.html" target="_blank">contactus</a>
-                        </li>
-                        <li>
-                            <form action="" class="cus-search align-right">
-                                <input type="text" name="" id="" class="cus-input" placeholder="search">
-                            </form>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">contact us</a>
                         </li>
                     </ul>
-                </nav>
-            </div>
+                </div>
+            </nav>
         </div>
         
         <!-- NAVBAR ENDS -->
         <!-- IPHONE AREA STARTS -->   
-        <div class="main-banner">
+        <div class="main-banner container-fluid">
             <div class="container">
-                <div >    
-                    <h1 data-aos="zoom-in" data-aos-duration="1000">We are Creative Digital Agency</h1>
-                    <button class="load-btn wow lightSpeedIn">loadmore</button>
+                <div class="row"> 
+                    <div class="col-lg-8 col-md-8 col-sm-12">   
+                        <h1 data-aos="zoom-in" data-aos-duration="1000">We are Creative Digital Agency</h1>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                        <button type="button" class="load-btn btn btn-primary wow lightSpeedIn">loadmore</button>
+                    </div>
                 </div>
                 <div class="banner-imgs">
                     <img src="imgs/iphone.png" alt="" class="iphone">
@@ -74,22 +73,24 @@
         </div>
         <!-- IPHONE AREA ENDS -->     
         <!-- WEB AREA STARTS -->
-        <div class="container cus-row" id="service">
-            <div class="layer-1"data-aos="fade-right"  data-aos-duration="1000">
-                <h3>web dseign</h3>
-                <img src="imgs/webimg.png" alt="">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rhoncus, lacus ac commodo volutpat, felis odio pulvinar enim, non dapibus mauris nulla sed ipsum.</p>
-            </div>
-            <div class="layer-1"data-aos="fade-up" data-aos-duration="1000">
-                <h3>social media</h3>
-                <img src="imgs/graphicimg.png" alt="">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rhoncus, lacus ac commodo volutpat, felis odio pulvinar enim, non dapibus mauris nulla sed ipsum.</p>
-            </div>
-            <div class="layer-1" data-aos="fade-left" data-aos-duration="1000">
-                <h3>mobile apps</h3>
-                <img src="imgs/mobileappimg.png" alt="">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rhoncus, lacus ac commodo volutpat, felis odio pulvinar enim, non dapibus mauris nulla sed ipsum.</p>
-            </div>
+        <div class="container cus-row" id="service">\
+            <div class="row">
+                <div class="layer-1 col-lg-4 col-sm-12"data-aos="fade-right"  data-aos-duration="1000">
+                    <h3>web dseign</h3>
+                    <img src="imgs/webimg.png " alt="">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rhoncus, lacus ac commodo volutpat, felis odio pulvinar enim, non dapibus mauris nulla sed ipsum.</p>
+                </div>
+                <div class="layer-1 col-lg-4 col-sm-12"data-aos="fade-up" data-aos-duration="1000">
+                    <h3>social media</h3>
+                    <img src="imgs/graphicimg.png" alt="">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rhoncus, lacus ac commodo volutpat, felis odio pulvinar enim, non dapibus mauris nulla sed ipsum.</p>
+                </div>
+                <div class="layer-1 col-lg-4 col-sm-12" data-aos="fade-left" data-aos-duration="1000">
+                    <h3>mobile apps</h3>
+                    <img src="imgs/mobileappimg.png" alt="">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rhoncus, lacus ac commodo volutpat, felis odio pulvinar enim, non dapibus mauris nulla sed ipsum.</p>
+                </div>
+            </div>    
         </div>
         <!-- WEB AREA ENDS -->
         <!-- IMAGES AREA START -->
