--- a/portfolio1.html
+++ b/portfolio1.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <link rel="stylesheet" href="css/portfolio.css">
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/animate.css">
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <!--[if lt Ie 9]
@@ -20,32 +21,32 @@
     <body>
         <!-- NAVBAR STARTS -->
         <div class="container">
-            <div class="cus-top">
-                <nav class="cus-nav">
-                    <a href="index.hmtl" class="align-left">
-                        <img src="imgs/logobox.png" alt="">
-                        <span class="navbar-text">bluebox</span>
+                <nav class="navbar navbar-expand-lg">
+                    <a class="navbar-brand" href="#">
+                        <img src="imgs/logobox.png" alt="" class="d-inline-block align-top">
+                        <span>Bluebox</span>
                     </a>
-                    <ul class="navbar-links align-right">
-                        <li>
-                            <a href="#" class="after">about</a>
-                        </li>
-                        <li>
-                            <a href="#" class="after" >works</a>
-                        </li>
-                        <li>
-                            <a href="index.html#service" class="after">services</a>
-                        </li>
-                        <li>
-                            <a href="#" class="after">blog</a>
-                        </li>
-                        <li>
-                            <a href="contactus.html" target="_blank">contactus</a>
-                        </li>
-                    </ul>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
+                    </button>
+                    <div class="collapse navbar-collapse cus-nav" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item after">
+                                <a class="nav-link" href="#">Home</a>
+                            </li>
+                            <li class="nav-item after">
+                                <a class="nav-link" href="#">service</a>
+                            </li>
+                            <li class="nav-item after">
+                                <a class="nav-link" href="#">works</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">contact us</a>
+                            </li>
+                        </ul>
+                    </div>
                 </nav>
             </div>
-        </div>
         <!-- NAVBAR ENDS -->
 
         <!-- PORTFOLIO AREA STARTS -->
