made several changes

--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
                 <div class="collapse navbar-collapse cus-nav" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item after">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item after">
-                            <a class="nav-link" href="#">service</a>
+                            <a class="nav-link" href="#service">service</a>
                         </li>
                         <li class="nav-item after">
-                            <a class="nav-link" href="#">works</a>
+                            <a class="nav-link" href="portfolio1.html">works</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">contact us</a>
+                            <a class="nav-link" href="contactus.html">contact us</a>
                         </li>
                     </ul>
                 </div>
@@ -73,7 +73,7 @@
         </div>
         <!-- IPHONE AREA ENDS -->     
         <!-- WEB AREA STARTS -->
-        <div class="container cus-row" id="service">\
+        <div class="container cus-row" id="service">
             <div class="row">
                 <div class="layer-1 col-lg-4 col-sm-12"data-aos="fade-right"  data-aos-duration="1000">
                     <h3>web dseign</h3>
