--- a/contactus.html
+++ b/contactus.html
@@ -36,13 +36,13 @@
                 <div class="collapse navbar-collapse cus-nav" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item after">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item after">
-                            <a class="nav-link" href="#">service</a>
+                            <a class="nav-link" href="index.html#service">service</a>
                         </li>
                         <li class="nav-item after">
-                            <a class="nav-link" href="#">works</a>
+                            <a class="nav-link" href="portfolio1.html">works</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">contact us</a>
@@ -118,7 +118,7 @@
                                 <a href="#" class="footer-after">blog</a>
                             </li>
                             <li>
-                                <a href="contactus.html" target="blank">contactus</a>
+                                <a href="#" target="blank">contactus</a>
                             </li>
                         </ul>
                     </div>
