--- a/portfolio1.html
+++ b/portfolio1.html
@@ -32,16 +32,16 @@
                     <div class="collapse navbar-collapse cus-nav" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item after">
-                                <a class="nav-link" href="#">Home</a>
+                                <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item after">
-                                <a class="nav-link" href="#">service</a>
+                                <a class="nav-link" href="index.html#service">service</a>
                             </li>
                             <li class="nav-item after">
                                 <a class="nav-link" href="#">works</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">contact us</a>
+                                <a class="nav-link" href="contactus.html">contact us</a>
                             </li>
                         </ul>
                     </div>
