--- a/portfolio1.html
+++ b/portfolio1.html
@@ -27,7 +27,7 @@
                         <span>Bluebox</span>
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
+                        <img src="imgs/burger2.png" alt="" height="29px" width="20px">
                     </button>
                     <div class="collapse navbar-collapse cus-nav" id="navbarNav">
                         <ul class="navbar-nav">
